[run-virt/dhcp-busybox] Get WINS server from upstream DHCP, pass on to VMs via local DHCPD

--- a/core/modules/run-virt/data/opt/openslx/vmchooser/config/udhcpd-nat1.conf
+++ b/core/modules/run-virt/data/opt/openslx/vmchooser/config/udhcpd-nat1.conf
@@ -34,7 +34,7 @@ pidfile         /var/run/udhcpd-nat1.pid
 option  dns     %DNSSERVER%
 option  subnet  255.255.255.0
 option  router  192.168.101.1
-option  wins    192.168.101.10
+option  wins    %WINS%
 option  domain  %DOMAIN%
 option  search  %SEARCH%
 option  lprsrv  192.168.101.1
