[pam] Remove old ldap libs, add keyutils

--- a/core/modules/pam/module.conf
+++ b/core/modules/pam/module.conf
@@ -5,11 +5,14 @@ REQUIRED_BINARIES="
 	sslconnect
 	unix_chkpwd
 	cifs.upcall
+	mount.cifs
+	key.dns_resolver
+	keyctl
+	request-key
 "
 REQUIRED_LIBRARIES="
 	nsswitch
 	static
-	umich_ldap
 	libnfsidmap
 	pam_script
 "
