[rootfs-stage31] Actually include amdgpu drivers instead of just building them

--- a/core/rootfs/rootfs-stage31/module.conf
+++ b/core/rootfs/rootfs-stage31/module.conf
@@ -16,6 +16,7 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/acpi/button.ko
 	kernel/drivers/gpu/drm/drm*.ko
 	kernel/drivers/gpu/drm/*/*.ko
+	kernel/drivers/gpu/drm/*/*/*.ko
 	kernel/drivers/hid/hid-generic.ko
 	kernel/drivers/i2c/algos/i2c-algo-bit.ko
 	kernel/drivers/i2c/i2c-core.ko
@@ -23,7 +24,7 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/usb/core/usbcore.ko
 	kernel/drivers/net/netconsole.ko
 	kernel/drivers/hid/hid.ko
-        kernel/drivers/hid/hid-cherry.ko
+	kernel/drivers/hid/hid-cherry.ko
 	kernel/drivers/hid/usbhid/usbhid.ko
 	kernel/drivers/platform/x86/wmi.ko
 	kernel/drivers/platform/x86/mxm-wmi.ko
@@ -48,6 +49,7 @@ REQUIRED_KERNEL_MODULES="
 "
 REQUIRED_FIRMWARE="
 	3com/
+	amdgpu/
 	e100/
 	matrox/
 	r128/
