--- a/core/modules/printergui/data/etc/systemd/system/printergui.service
+++ b/core/modules/printergui/data/etc/systemd/system/printergui.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Printergui - bwLehrpool printing system
 Requires=network.target graphical.target
-After=network.target
+After=network.target stage4.target
 Before=cups.service
 
 [Service]
