[beamergui] FFS, use brain! (name binary properly, include in target)

--- a/core/modules/beamergui/module.conf
+++ b/core/modules/beamergui/module.conf
@@ -1,6 +1,7 @@
 REQUIRED_GIT="git://git.openslx.org/openslx-ng/beamergui.git"
 REQUIRED_BINARIES="
 	beamergui
+	parse-edid
 "
 REQUIRED_LIBRARIES="
 "
