[cron] cronie moved to github

--- a/core/modules/cron/module.conf
+++ b/core/modules/cron/module.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
-REQUIRED_GIT="http://git.fedorahosted.org/git/cronie.git"
-REQUIRED_COMMIT="c219d7cb9d4887f685ac4ff1e9439b0d8aa39ef6"
+REQUIRED_GIT="https://github.com/cronie-crond/cronie.git"
+REQUIRED_COMMIT="d582556168e740fbd19e777a6733b404084e69d8"
 REQUIRED_BINARIES="
 	crond
 "
