--- a/core/modules/cups-sicgs/module.conf
+++ b/core/modules/cups-sicgs/module.conf
@@ -1,3 +1,5 @@
+#!/bin/bash
+
 REQUIRED_ARCHIVE="http://files.canon-europe.com/files/soft45525/Software/CQue_v3.0.2_Linux_32_64_DE.tar.zip"
 REQUIRED_BINARIES="
 	sicgsfilter
