[cups] Add prestart script that fixed config problems
CUPS < 2.0 requires the <DefaultPrinter> to be closed by
a </Printer> tag, while newer versions allow </DefaultPrinter>.
Patch the printers.conf if required.
Also makes sure the permissions of /etc/cups/* are somewhat sane.

--- a/core/modules/cups/data/etc/systemd/system/cups.service
+++ b/core/modules/cups/data/etc/systemd/system/cups.service
@@ -6,4 +6,5 @@ Before=graphical.target
 ConditionFileNotEmpty=/etc/cups/printers.conf
 
 [Service]
+ExecStartPre=-/opt/openslx/scripts/systemd-cupsd_prestart
 ExecStart=/usr/sbin/cupsd -f
