[rfs-stage31] Use current drm.cfg from old tm-scripts

--- a/core/rootfs/rootfs-stage31/templates/drm.cfg
+++ b/core/rootfs/rootfs-stage31/templates/drm.cfg
@@ -5,15 +5,25 @@
 10de:087d          @nvidia
 ##
 # 10de-11c0: nvidia Geforce GTX 660 (OG)
+# 10de-11fa: nvidia Quadro K4000 (RT)
 # 10de-0fc2: nvidia GeForce GT 630  (OG)
 # 10de-0dd8: nvidia Quadro 2000
+# 10de-0ff3: nvidia Quadro K420
+# 10de-0df8: nvidia Quadro 600
+# 10de-06dd: nvidia Quadro 4000
+# 10de-1382: nvidia GeForce GTX 745 (HN)
 ##
 10de:11c0          @nvidia
+10de:11fa          @nvidia
 10de:0fc2          @nvidia
 10de:0dd8          @nvidia
+10de:0ff3          @nvidia
+10de:0df8          @nvidia
+10de:06dd          @nvidia
+10de:1382          @nvidia
 ## intel
 # Dell GX 620
 8086:2772          i915
 # aliases
-@nvidia            nvidia/nvidia.ko nvidia/nvidia-uvm.ko nvidia/nvidia-modeset.ko
+@nvidia            nvidia/nvidia.ko nvidia/nvidia-uvm.ko nvidia/nvidia-modeset.ko nvidia/nvidia-drm.ko
 @nvidia_fallback   nouveau
