[vmware] Simplify module: module.conf just requires version number, not full URL
REQUIRED_VERSION="12.5.4" is enough now, rest is determined by build script.

Also used the opportunity to update to 12.5.4 from 12.5.2. The vmware modules
now build cleanly on the 4.9.x kernel without additional patches.

--- a/core/modules/vmware/module.conf
+++ b/core/modules/vmware/module.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
-REQUIRED_DOWNLOAD_BASE="http://softwareupdate.vmware.com/cds/vmw-desktop/ws/12.5.2/4638234/linux/core/"
+REQUIRED_VERSION="12.5.4"
 REQUIRED_TYPE="workstation"
 REQUIRED_MODULES="kernel"
 REQUIRED_DIRECTORIES="
