[slxbrowser] Include libqxcb (qtgui) libs

--- a/core/modules/slxbrowser/module.conf
+++ b/core/modules/slxbrowser/module.conf
@@ -2,3 +2,4 @@
 REQUIRED_GIT="git://git.openslx.org/openslx-ng/slxbrowser.git"
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="slxbrowser"
+REQUIRED_LIBRARIES="libqxcb"
