[init, etc] Pass system-uuid when fetching config & config.tgz
Also save the system-uuid for later use in stage32+, which changed
locations from /run to /etc - modules got updated accordingly

--- a/core/rootfs/rootfs-stage31/module.conf
+++ b/core/rootfs/rootfs-stage31/module.conf
@@ -5,6 +5,7 @@ REQUIRED_BINARIES="
 REQUIRED_MODULES="
 	busybox
 	kernel
+	system-uuid
 "
 REQUIRED_KERNEL_MODULES="
 	kernel/drivers/net/ethernet/*.ko
