[lightdm] filtered REQUIRED_DIR list and systemd service

--- a/core/modules/lightdm/module.conf
+++ b/core/modules/lightdm/module.conf
@@ -1,8 +1,12 @@
 #!/bin/bash
 REQUIRED_BINARIES="
 	lightdm
+	lightdm-session
 "
 REQUIRED_LIBRARIES=""
 REQUIRED_DIRECTORIES="
-	/
+	/etc/dbus-1
+	/etc/lightdm
+	/etc/pam.d
+	/usr/lib
 "
