[rfs-stage32] Clean up split addon handling

--- a/core/rootfs/rootfs-stage32/data/etc/systemd/system/setup-slx-addon@.service
+++ b/core/rootfs/rootfs-stage32/data/etc/systemd/system/setup-slx-addon@.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Setup SLX addon %i
 DefaultDependencies=no
-Wants=tmp.target
-After=tmp.target
+Wants=tmp.target download-slx-addon@%i.service
+After=tmp.target download-slx-addon@%i.service
 
 [Service]
 Type=oneshot
