[run-virt] Speed up network setup
DNS dependency solved via systemd instead of busy-wait loop.
nslookup timeout set to 1 second.

--- a/core/modules/run-virt/data/etc/systemd/system/run-virt-env.service
+++ b/core/modules/run-virt/data/etc/systemd/system/run-virt-env.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Sets up the virtualization environment
 Before=graphical.target
+Wants=network-dns.target
+After=network-dns.target
 
 [Service]
 Type=oneshot
