[rfs-s32] fix ssl certs not being copied

--- a/core/rootfs/rootfs-stage32/module.conf
+++ b/core/rootfs/rootfs-stage32/module.conf
@@ -1,6 +1,7 @@
 #!/bin/bash
 REQUIRED_MODULES="
 	kernel
+	slxlog
 "
 REQUIRED_BINARIES="
 	bash
@@ -78,6 +79,10 @@ REQUIRED_FILES="
 	/etc/networks
 	/etc/netconfig
 	/etc/fonts/fonts.conf
+"
+REQUIRED_DIRECTORIES="
+	/etc
+	/usr
 "
 REQUIRED_KERNEL_MODULES="
 	kernel/drivers/cpufreq
