[qemukvm] reworked qemu run-virt module
now uses a similar structure than the vmware plugin for run-virt
guest OS stuff needs to go aways, kept for compat reasons for now
TODO metadata handling in bwLehrpool-Suite

--- a/core/modules/qemukvm/module.conf
+++ b/core/modules/qemukvm/module.conf
@@ -1,12 +1,5 @@
 #!/bin/bash
+REQUIRED_MODULES="kernel"
 REQUIRED_DIRECTORIES="
-		/etc
-		/lib
-		/usr/bin
-		/usr/sbin
-		/usr/lib
-		/usr/share/lintian
-		/usr/share/qemu
-		/usr/share/seabios
-		/usr/share/vgabios
+		/
 "
