--- a/core/rootfs/rootfs-stage32/module.conf
+++ b/core/rootfs/rootfs-stage32/module.conf
@@ -149,7 +149,7 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/net/macvtap.ko
 	kernel/drivers/net/veth.ko
 	kernel/drivers/net/vxlan.ko
-	kernel/net/openvswitch/openvswitch.ko
+	kernel/virt
 "
 REQUIRED_FIRMWARE="
 	3com
