--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Setup DNBD3 proxy server
-After=network.target multi-user.target
+After=setup-partitions.service
 
 [Service]
 Type=oneshot
