--- a/core/modules/vmware/module.conf
+++ b/core/modules/vmware/module.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
-REQUIRED_VERSION="12.5.7"
+REQUIRED_VERSION="14.0.0"
 REQUIRED_TYPE="workstation"
 REQUIRED_MODULES="kernel"
 REQUIRED_DIRECTORIES="
@@ -12,6 +12,7 @@ REQUIRED_DIRECTORIES="
 	/usr/lib/vmware/libconf
 	/usr/lib/vmware/licenses
 	/usr/lib/vmware/resources
+	/usr/lib/vmware/roms
 	/usr/lib/vmware/scripts
 	/usr/lib/vmware/share
 	/usr/lib/vmware/xkeymap
