[dnbd3-proxy-mode] Run dnbd3-server in -errormsg mode if setup failed

--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/dnbd3-proxy.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/dnbd3-proxy.service
@@ -4,7 +4,7 @@ After=setup-dnbd3-proxy.service
 
 [Service]
 User=dnbd3
-ExecStart=/opt/openslx/bin/dnbd3-server -n -c /etc/dnbd3
+ExecStart=/opt/openslx/scripts/systemd-dnbd3_proxy
 Restart=always
-RestartSec=1
+RestartSec=3
 TimeoutStopSec=10
