[dnbd3-proxy-mode] Tweak serverPenalty, only create ipt rules with whitelist present

--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
@@ -1,7 +1,8 @@
 [Unit]
-Description=Setup DNBD3 proxy server
+Description=DNBD3 proxy server config generator
 After=setup-partitions.service
 
 [Service]
 Type=oneshot
 ExecStart=/opt/openslx/scripts/systemd-setup_dnbd3_proxy
+RemainAfterExit=true
