[hardware-stats] Write log file about potential problems
This is a more generic version of what we patched into
the kdm theme previously, so we can switch to lightdm
at some point.

--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Gather statistics about this machine and send to boot server
 DefaultDependencies=no
-After=tmp.target
+After=tmp.target mount-vm-store.service
 Wants=tmp.target
 
 [Service]
