[lightdm-greeter-bwlp] Update config for bwlp style

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -13,7 +13,9 @@
 ;      Can be given in pixels, e.g. loginform-offset-y=60px, or in percentage of screen width, e.g. loginform-offset-y=20%.
 
 [General]
-;greeter-icon-theme=oxygen
-greeter-background-image=/opt/openslx/lightdm/bwlp-background.png
 loginform-offset-x=50%
 loginform-offset-y=50%
+greeter-banner-image=/opt/openslx/lightdm/bwlp-banner.svg
+greeter-bottom-left-logo-path=/etc/branding.svg
+greeter-background-gradient=ffffff ffffff 888687 f9a72b
+greeter-message-file=/run/hw-messages.log
