[lightdm-greeter-bwlp] Support autologin via demo session

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/lightdm.conf.d/10-openslx.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/lightdm.conf.d/10-openslx.conf
@@ -1,7 +1,15 @@
 [SeatDefaults]
 greeter-hide-users=true
 greeter-session=qt-lightdm-greeter
+
+greeter-allow-guest=true
+allow-guest=true
+guest-wrapper=/opt/openslx/lightdm/guest-session
+
 session-wrapper=/etc/X11/Xsession
 display-setup-script=/etc/X11/Xsetup
 session-cleanup-script=/etc/X11/Xreset
+
+[LightDM]
+guest-account-script=/opt/openslx/lightdm/guest-account
 
