--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -19,3 +19,5 @@ greeter-banner-image=/opt/openslx/lightdm/bwlp-banner.svg
 greeter-bottom-left-logo-path=/etc/branding.svg
 greeter-background-gradient=ffffff ffffff 888687 f9a72b
 greeter-message-file=/run/hw-warnings.log
+auto-login-check-cmd=/opt/openslx/lightdm/is-autologin-enabled
+
