[safe-mode] Support lightdm

--- a/core/modules/safe-mode/data/etc/systemd/system/exam.service
+++ b/core/modules/safe-mode/data/etc/systemd/system/exam.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Sets up safe mode (no magic keys, no tty switch, no openbox menu)
 DefaultDependencies=no
+Before=graphical.target display-manager.target
 
 [Service]
 Type=oneshot
