Update our kernel wanted config

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -53,7 +53,7 @@ CONFIG_DL2K=y
 CONFIG_DM9102=y
 CONFIG_DNET=y
 CONFIG_DRM=y
-CONFIG_DRM_AST=n
+CONFIG_DRM_AST=m
 CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_GMA3600=y
 CONFIG_DRM_GMA500=m
@@ -245,4 +245,29 @@ CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_ALLOW_LOCKDOWN_LIFT=y
+CONFIG_ARCH_HAS_MMIO_FLUSH=y
+CONFIG_ARCH_WANT_FRAME_POINTERS=y
+CONFIG_BCMGENET=y
+CONFIG_BLK_CPQ_CISS_DA=m
+CONFIG_CISS_SCSI_TAPE=y
+CONFIG_DRM_KMS_HELPER=y
+CONFIG_EFI_ALLOW_SECURE_BOOT_EXIT=y
+CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
+CONFIG_EFI_SIGNATURE_LIST_PARSER=y
+CONFIG_HIO=y
+CONFIG_I2C_MUX_PINCTRL=m
+CONFIG_IGB_DCA=y
+CONFIG_IRQ_SIM=n
+CONFIG_IXGBE_DCA=y
+CONFIG_MEDIA_RC_SUPPORT=y
+CONFIG_ORC_UNWINDER=y
+CONFIG_ROCKCHIP_PHY=y
+CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+CONFIG_SFC_MTD=y
+CONFIG_VERSION_SIGNATURE="2017-11-21 Config"
+CONFIG_X86_5LEVEL=n
+CONFIG_ZRAM=m
 
