[hardware-stats] Support reporting suspend/resume

--- a/core/modules/hardware-stats/data/etc/systemd/system/shutdown-usage-log.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/shutdown-usage-log.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gather statistics about this machine and send to boot server
+Description=Tell server we're shuttong down
 DefaultDependencies=no
 Before=shutdown.target
 RefuseManualStart=yes
