[ldm-greeter-bwlp] Make bg gradient much more pale

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -17,7 +17,7 @@ loginform-offset-x=50%
 loginform-offset-y=50%
 greeter-banner-image=/opt/openslx/lightdm/bwlp-banner.svg
 greeter-bottom-left-logo-path=/etc/branding.svg
-greeter-background-gradient=ffffff ffffff 888687 f9a72b
+greeter-background-gradient=e8e6e7 ffffff e8e6e7 ffd78b
 greeter-message-file=/run/hw-warnings.log
 auto-login-check-cmd=/opt/openslx/lightdm/is-autologin-enabled
 
