--- a/core/rootfs/rootfs-stage31/templates/drm.cfg
+++ b/core/rootfs/rootfs-stage31/templates/drm.cfg
@@ -12,7 +12,9 @@
 # 10de-0df8: nvidia Quadro 600
 # 10de-06dd: nvidia Quadro 4000
 # 10de-1382: nvidia GeForce GTX 745 (HN)
-# 10de-13ba Quadro K2200
+# 10de-13ba: Quadro K2200
+# 10de-13bb: nvidia Quadro K620 (HN)
+# 10de-1381: nvidia GeForce GTX 750 (HN)
 ##
 10de:11c0          @nvidia
 10de:11fa          @nvidia
@@ -23,6 +25,9 @@
 10de:06dd          @nvidia
 10de:1382          @nvidia
 10de:13ba          @nvidia
+10de:13bb          @nvidia
+10de:1381          @nvidia
+
 ## intel
 # Dell GX 620
 8086:2772          i915
