[rfs-s31] add support for amdgpu/radeon in kcl

--- a/core/rootfs/rootfs-stage31/templates/drm.cfg
+++ b/core/rootfs/rootfs-stage31/templates/drm.cfg
@@ -34,3 +34,6 @@
 # aliases
 @nvidia            nvidia/nvidia.ko nvidia/nvidia-uvm.ko nvidia/nvidia-modeset.ko nvidia/nvidia-drm.ko
 @nvidia_fallback   nouveau
+@amdgpu            amdgpu
+@amdgpu_fallback   radeon
+@radeon            radeon
