[dhcpc/systemd] forward correct nic name
'br-nic-1' as %I became 'br/nic/1' which isn't very linux friendly :)

--- a/core/modules/systemd/data/etc/systemd/system/network-interface@.service
+++ b/core/modules/systemd/data/etc/systemd/system/network-interface@.service
@@ -5,5 +5,5 @@ Before=dhcpc@%i.service
 
 [Service]
 Type=simple
-ExecStart=/opt/openslx/sbin/ip link set dev %I up
+ExecStart=/opt/openslx/sbin/ip link set dev %i up
 
