--- a/core/modules/dhcpc-busybox/data/etc/systemd/system/udhcpc@.service
+++ b/core/modules/dhcpc-busybox/data/etc/systemd/system/udhcpc@.service
@@ -4,7 +4,7 @@ After=systemd-tmpfiles-setup.service
 
 [Service]
 Type=forking
-PIDFile=/run/udhcpc/udhcpc.%I.pid
-ExecStart=/opt/openslx/scripts/systemd-udhcpc++ %I
-ExecStopPost=/opt/openslx/bin/rm /run/udhcpc/udhcpc.%I.pid
+PIDFile=/run/udhcpc/udhcpc.%i.pid
+ExecStart=/opt/openslx/scripts/systemd-udhcpc++ %i
+ExecStopPost=/opt/openslx/bin/rm /run/udhcpc/udhcpc.%i.pid
 
