[kernel] add virtio support for net/blk

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -230,6 +230,9 @@ CONFIG_VGA_SWITCHEROO=y
 CONFIG_VIA_RHINE=y
 CONFIG_VIA_RHINE_MMIO=y
 CONFIG_VIA_VELOCITY=y
+CONFIG_VIRTIO_BLK=y
+CONFIG_VIRTIO_BLK_SCSI=y
+CONFIG_VIRTIO_NET=y
 CONFIG_VMXNET3=y
 CONFIG_VORTEX=y
 CONFIG_VXGE=y
