--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -270,7 +270,8 @@ CONFIG_ROCKCHIP_PHY=y
 CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SFC_MTD=y
-CONFIG_VERSION_SIGNATURE="2017-11-21 Config"
+CONFIG_VERSION_SIGNATURE="2017-12-20 Config"
 CONFIG_X86_5LEVEL=n
 CONFIG_ZRAM=m
+CONFIG_SPI_INTEL_SPI_PLATFORM=n
 
