kernel.wanted.config: Enable SMB2/3 and cifs upcall
References #3285

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -270,8 +270,12 @@ CONFIG_ROCKCHIP_PHY=y
 CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SFC_MTD=y
-CONFIG_VERSION_SIGNATURE="2017-12-20 Config"
+CONFIG_VERSION_SIGNATURE="2017-12-22 Config"
 CONFIG_X86_5LEVEL=n
 CONFIG_ZRAM=m
 CONFIG_SPI_INTEL_SPI_PLATFORM=n
+CONFIG_CIFS=m
+CONFIG_CIFS_DFS_UPCALL=y
+CONFIG_CIFS_SMB2=y
+CONFIG_CIFS_SMB311=y
 
