add tmp/chroot, tmp/work and sort .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
 *~
-*.swp
-*.so
-src/
-ksrc/
 aufs?-standalone/
 build/
 .built
-.fetched_source
-list*
-test
-logs/
 /config
+.fetched_source
+ksrc/
+list*
+logs/
 openslx.config
-rootupper/
 overlay
-var/log
+rootupper/
+*.so
+src/
+*.swp
+test
+tmp/chroot
+tmp/work
 var/builds
+var/log
 **/winres/tmp/
 **/winres/winres.exe
