--- a/core/modules/pam-slx-plug/data/etc/systemd/system/slx-update-pam-nss.service
+++ b/core/modules/pam-slx-plug/data/etc/systemd/system/slx-update-pam-nss.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Create fresh pam config and nsswitch.conf
-Before=graphical.target display-manager.target
+Before=graphical.target display-manager.target sssd.service
 
 [Service]
 Type=oneshot
