[pam/rfs-stage32/pam-slx-plug] Only overwrite pam/nsswitch files that have <slx-autogen>

--- a/core/rootfs/rootfs-stage32/data/etc/nsswitch.conf
+++ b/core/rootfs/rootfs-stage32/data/etc/nsswitch.conf
@@ -1,14 +1,14 @@
 # /etc/nsswitch.conf
 #
-# Example configuration of GNU Name Service Switch functionality.
-# If you have the `glibc-doc-reference' and `info' packages installed, try:
-# `info libc "Name Service Switch"' for information about this file.
+# <slx-autogen>
+# Default OpenSLX nsswitch file -- remove line above to prevent
+# this file from being overwritten at runtime
 
-passwd:         compat
-group:          compat
-shadow:         compat
+passwd:         files
+group:          files
+shadow:         files
 
-hosts:          files mdns4_minimal [NOTFOUND=return] dns mdns4
+hosts:          files dns
 networks:       files
 
 protocols:      db files
