--- a/core/rootfs/rootfs-stage32/module.conf
+++ b/core/rootfs/rootfs-stage32/module.conf
@@ -128,6 +128,7 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/parport
 	kernel/drivers/misc
 	kernel/drivers/scsi
+	kernel/drivers/nvme
 	kernel/drivers/message
 	kernel/drivers/auxdisplay
 	kernel/drivers/target
