[rfs-stage32] Smarter handling of ID45; unify part detection; sort by size
- Partitions matching a certain ID will be sorted by size by the
  get_all_with_id function, so in case you want only one by that type
  you'll get the largest one.
- Partition detection is now done by querying udev for all the block
  devices found in /dev which works well for both DOS and GPT.
- ID45 code now handles the cases where a partition was resized offline
  and adjusts or recreates the file system accordingly. We also enforce
  ext4 for ID45 now instead of acceping anything that appears to be
  mountable.

--- a/core/rootfs/rootfs-stage32/data/etc/systemd/system/setup-partitions.service
+++ b/core/rootfs/rootfs-stage32/data/etc/systemd/system/setup-partitions.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Setup local disk partitions (tmp, swap)
 DefaultDependencies=no
-Before=basic.target
+Before=basic.target tmp.target
 After=systemd-udev-settle.service
 Wants=tmp.target
 
