[dnbd3-proxy-mode] Run setup before spawning getty

--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=DNBD3 proxy server config generator
-After=setup-partitions.service
+Wants=tmp.target
+After=tmp.target
+Before=getty.target
 
 [Service]
 Type=oneshot
