[lightdm-greeter-bwlp] Update style (clock)

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -20,4 +20,6 @@ greeter-bottom-left-logo-path=/etc/branding.svg
 greeter-background-gradient=e8e6e7 ffffff e8e6e7 ffd78b
 greeter-message-file=/run/hw-warnings.log
 auto-login-check-cmd=/opt/openslx/lightdm/is-autologin-enabled
-
+clock-text-style="color:#fff; font-size:14pt; qproperty-alignment: AlignRight; border:none"
+clock-background-style="background:rgb(136,134,135); border:none"
+clock-shadow="1 1 #555 0"
