[systemd] network-interface@ should be oneshot

--- a/core/modules/systemd/data/etc/systemd/system/network-interface@.service
+++ b/core/modules/systemd/data/etc/systemd/system/network-interface@.service
@@ -4,6 +4,6 @@ Wants=dhcpc@%i.service
 Before=dhcpc@%i.service
 
 [Service]
-Type=simple
+Type=oneshot
 ExecStart=/opt/openslx/sbin/ip link set dev %i up
 
