[rfs-stage31] Add ipmi modules, required by nvidia driver

--- a/core/rootfs/rootfs-stage31/module.conf
+++ b/core/rootfs/rootfs-stage31/module.conf
@@ -15,6 +15,8 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/video/via/viafb.ko
 	kernel/drivers/acpi/video.ko
 	kernel/drivers/ssb/ssb.ko
+	kernel/drivers/acpi/acpi_ipmi.ko
+	kernel/drivers/char/ipmi/*.ko
 	kernel/drivers/acpi/button.ko
 	kernel/drivers/gpu/drm/drm*.ko
 	kernel/drivers/gpu/drm/*/*.ko
