[rfs-stage31] Force loading acpi_ipmi for nvidia, doesn't handle dependencies on its own

--- a/core/rootfs/rootfs-stage31/templates/drm.cfg
+++ b/core/rootfs/rootfs-stage31/templates/drm.cfg
@@ -32,7 +32,7 @@
 # Dell GX 620
 8086:2772          i915
 # aliases
-@nvidia            nvidia/nvidia.ko nvidia/nvidia-uvm.ko nvidia/nvidia-modeset.ko nvidia/nvidia-drm.ko
+@nvidia            acpi_ipmi nvidia/nvidia.ko nvidia/nvidia-uvm.ko nvidia/nvidia-modeset.ko nvidia/nvidia-drm.ko
 @nvidia_fallback   nouveau
 @amdgpu            amdgpu
 @amdgpu_fallback   radeon
