--- a/core/rootfs/rootfs-stage32/data/etc/systemd/system/setup-partitions.service
+++ b/core/rootfs/rootfs-stage32/data/etc/systemd/system/setup-partitions.service
@@ -2,8 +2,8 @@
 Description=Setup local disk partitions (tmp, swap)
 DefaultDependencies=no
 Before=basic.target tmp.target
-After=systemd-udev-settle.service
-Wants=tmp.target
+After=systemd-udev-settle.service systemd-udevd.service
+Wants=tmp.target systemd-udevd.service
 
 [Service]
 Type=oneshot
