--- a/core/rootfs/rootfs-stage31/templates/drm.cfg
+++ b/core/rootfs/rootfs-stage31/templates/drm.cfg
@@ -12,9 +12,10 @@
 # 10de-0df8: nvidia Quadro 600
 # 10de-06dd: nvidia Quadro 4000
 # 10de-1382: nvidia GeForce GTX 745 (HN)
-# 10de-13ba: Quadro K2200
+# 10de-13ba: nvidia Quadro K2200
 # 10de-13bb: nvidia Quadro K620 (HN)
 # 10de-1381: nvidia GeForce GTX 750 (HN)
+# 10de:0ffe: nvidia Quadro K2000
 ##
 10de:11c0          @nvidia
 10de:11fa          @nvidia
@@ -27,6 +28,7 @@
 10de:13ba          @nvidia
 10de:13bb          @nvidia
 10de:1381          @nvidia
+10de:0ffe          @nvidia
 
 ## intel
 # Dell GX 620
