[kernel-config] add support for network bridges!!1

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -36,6 +36,7 @@ CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
 CONFIG_BNA=y
 CONFIG_BNX2=y
 CONFIG_BNX2X=y
+CONFIG_BRIDGE=y
 CONFIG_CASSINI=y
 CONFIG_CHELSIO_T1=y
 CONFIG_CHELSIO_T1_1G=y
