[kernel-config] maybe we need FUSE ?!?!?

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -101,6 +101,7 @@ CONFIG_FB_BOOT_VESA_SUPPORT=y
 CONFIG_FB_VESA=y
 CONFIG_FEALNX=y
 CONFIG_FORCEDETH=y
+CONFIG_FUSE_FS=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
 CONFIG_HAPPYMEAL=y
