[kernel-config] add device mapper targets

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -51,6 +51,8 @@ CONFIG_DE2104X=y
 CONFIG_DE600=y
 CONFIG_DE620=y
 CONFIG_DL2K=y
+CONFIG_DM_SNAPSHOT=y
+CONFIG_DM_THIN_PROVISIONING=y
 CONFIG_DM9102=y
 CONFIG_DNET=y
 CONFIG_DRM=y
