--- a/core/modules/systemd/module.conf
+++ b/core/modules/systemd/module.conf
@@ -1,7 +1,7 @@
 #!/bin/bash
-REQUIRED_VERSION="systemd-204"
-REQUIRED_URL="http://www.freedesktop.org/software/systemd/${REQUIRED_VERSION}.tar.xz"
-REQUIRED_LIBKMOD_VERSION="kmod-14"
+REQUIRED_VERSION="234"
+REQUIRED_URL="https://github.com/systemd/systemd/archive/v${REQUIRED_VERSION}.tar.gz"
+REQUIRED_LIBKMOD_VERSION="kmod-15"
 REQUIRED_LIBKMOD_URL="http://www.kernel.org/pub/linux/utils/kernel/kmod/${REQUIRED_LIBKMOD_VERSION}.tar.gz"
 REQUIRED_BINARIES="
 	journalctl
@@ -31,16 +31,12 @@ REQUIRED_BINARIES="
 	systemd-journald
 	systemd-logind
 	systemd-modules-load
-	systemd-multi-seat-x
 	systemd-random-seed
-	systemd-readahead
 	systemd-remount-fs
 	systemd-reply-password
 	systemd-shutdown
-	systemd-shutdownd
 	systemd-sleep
 	systemd-sysctl
-	systemd-timestamp
 	systemd-udevd
 	systemd-update-utmp
 	systemd-user-sessions
@@ -49,7 +45,6 @@ REQUIRED_BINARIES="
 	systemd-getty-generator
 	systemd-rc-local-generator
 	systemd-system-update-generator
-	accelerometer
 	ata_id
 	cdrom_id
 	collect
@@ -64,4 +59,5 @@ REQUIRED_DIRECTORIES="
 	/usr/share/polkit-1
 	/usr/lib/udev
 	/usr/lib/tmpfiles.d
+	/usr/lib/systemd/user
 "
