--- a/core/modules/systemd/data/usr/lib/systemd/system/kmod-static-nodes.service
+++ b/core/modules/systemd/data/usr/lib/systemd/system/kmod-static-nodes.service
@@ -6,12 +6,13 @@
 #  (at your option) any later version.
 
 [Unit]
-Description=Power-Off
-Documentation=man:systemd-halt.service(8)
+Description=Create list of required static device nodes for the current kernel
 DefaultDependencies=no
-Requires=shutdown.target umount.target final.target
-After=shutdown.target umount.target final.target
+Before=sysinit.target systemd-tmpfiles-setup-dev.service
+ConditionCapability=CAP_SYS_MODULE
+ConditionFileNotEmpty=/lib/modules/%v/modules.devname
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl --force poweroff
+RemainAfterExit=yes
+ExecStart=/bin/kmod static-nodes --format=tmpfiles --output=/run/tmpfiles.d/kmod.conf
