--- a/core/modules/systemd/data/usr/lib/systemd/system/systemd-initctl.service
+++ b/core/modules/systemd/data/usr/lib/systemd/system/systemd-initctl.service
@@ -6,15 +6,11 @@
 #  (at your option) any later version.
 
 [Unit]
-Description=udev Control Socket
-Documentation=man:systemd-udevd.service(8) man:udev(7)
+Description=/dev/initctl Compatibility Daemon
+Documentation=man:systemd-initctl.service(8)
 DefaultDependencies=no
-Before=sockets.target
-ConditionPathIsReadWrite=/sys
 
-[Socket]
-Service=systemd-udevd.service
-ListenSequentialPacket=/run/udev/control
-SocketMode=0600
-PassCredentials=yes
-RemoveOnStop=yes
+[Service]
+NotifyAccess=all
+ExecStart=/usr/lib/systemd/systemd-initctl
+SystemCallArchitectures=native
