--- a/core/modules/systemd/data/usr/lib/systemd/system/systemd-udev-trigger.service
+++ b/core/modules/systemd/data/usr/lib/systemd/system/systemd-udev-trigger.service
@@ -9,10 +9,10 @@
 Description=udev Coldplug all Devices
 Documentation=man:udev(7) man:systemd-udevd.service(8)
 DefaultDependencies=no
-Wants=systemd-udevd.service systemd-udev-settle.service
-After=systemd-udevd-kernel.socket systemd-udevd-control.socket
-Before=sysinit.target systemd-udev-settle.service
-ConditionCapability=CAP_MKNOD
+Wants=systemd-udevd.service
+After=systemd-udevd-kernel.socket systemd-udevd-control.socket systemd-hwdb-update.service
+Before=sysinit.target
+ConditionPathIsReadWrite=/sys
 
 [Service]
 Type=oneshot
