--- a/core/modules/systemd/data/usr/lib/systemd/system/systemd-halt.service
+++ b/core/modules/systemd/data/usr/lib/systemd/system/systemd-halt.service
@@ -9,8 +9,8 @@
 Description=Halt
 Documentation=man:systemd-halt.service(8)
 DefaultDependencies=no
-Requires=shutdown.target final.target
-After=shutdown.target final.target
+Requires=shutdown.target umount.target final.target
+After=shutdown.target umount.target final.target
 
 [Service]
 Type=oneshot
