--- a/core/modules/systemd/data/usr/lib/systemd/system/systemd-journal-flush.service
+++ b/core/modules/systemd/data/usr/lib/systemd/system/systemd-journal-flush.service
@@ -6,16 +6,17 @@
 #  (at your option) any later version.
 
 [Unit]
-Description=Apply Kernel Variables
-Documentation=man:systemd-sysctl.service(8) man:sysctl.d(5)
+Description=Flush Journal to Persistent Storage
+Documentation=man:systemd-journald.service(8) man:journald.conf(5)
 DefaultDependencies=no
-Conflicts=shutdown.target
-After=systemd-modules-load.service
-Before=sysinit.target shutdown.target
-ConditionPathIsReadWrite=/proc/sys/net/
+Requires=systemd-journald.service
+After=systemd-journald.service
+After=systemd-remount-fs.service
+Before=systemd-user-sessions.service systemd-tmpfiles-setup.service
+RequiresMountsFor=/var/log/journal
 
 [Service]
+ExecStart=/usr/bin/journalctl --flush
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/lib/systemd/systemd-sysctl
 TimeoutSec=90s
