[qt5core] Put common qt requirements in own module

--- a/core/modules/beamergui/module.conf
+++ b/core/modules/beamergui/module.conf
@@ -1,11 +1,10 @@
 #!/bin/bash
+REQUIRED_MODULES="
+	qt5core
+"
 REQUIRED_GIT="git://git.openslx.org/openslx-ng/beamergui.git"
 REQUIRED_BINARIES="
 	beamergui
 	parse-edid
 "
-REQUIRED_LIBRARIES="
-"
-REQUIRED_SYSTEM_FILES="
-"
-# TODO add libraries
+
