--- a/core/modules/lightdm-greeter-bwlp/module.conf
+++ b/core/modules/lightdm-greeter-bwlp/module.conf
@@ -1,10 +1,12 @@
-REQUIRED_MODULE="lightdm"
+REQUIRED_MODULEs="
+	lightdm
+	qt5core
+"
 REQUIRED_GIT="git://git.openslx.org/openslx-ng/slxgreeter"
 REQUIRED_BINARIES="
 	qt-lightdm-greeter
 "
 REQUIRED_LIBRARIES=""
 REQUIRED_DIRECTORIES="
-	/usr/lib
 	/usr/share/xgreeters
 "
