--- a/core/modules/pvs2/module.conf
+++ b/core/modules/pvs2/module.conf
@@ -9,12 +9,8 @@ REQUIRED_BINARIES="
 REQUIRED_DIRECTORIES="
 	/opt/openslx/pvs2/
 "
-REQUIRED_LIBRARIES="
-	libqjpeg
-"
-REQUIRED_SYSTEM_FILES="
-"
 REQUIRED_MODULES="
+	qt5core
 	x11vnc
 "
 # TODO add libraries
