--- a/core/modules/vmchooser2/module.conf
+++ b/core/modules/vmchooser2/module.conf
@@ -1,4 +1,7 @@
 #!/bin/bash
+REQUIRED_MODULES="
+	qt5core
+"
 REQUIRED_GIT="git://git.openslx.org/openslx-ng/vmchooser2.git"
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="vmchooser.real"
