--- a/core/modules/qt5core/module.conf
+++ b/core/modules/qt5core/module.conf
@@ -8,8 +8,8 @@ REQUIRED_LIBRARIES="
 REQUIRED_DIRECTORIES="
 "
 REQUIRED_FILES="
-	/usr/share/qt5/translations/qt_en.qm
-	/usr/share/qt5/translations/qt_de.qm
-	/usr/share/qt5/translations/qt_fr.qm
-	/usr/share/qt5/translations/qt_zh_CN.qm
+	/usr/share/qt5/translations/qt*_en.qm
+	/usr/share/qt5/translations/qt*_de.qm
+	/usr/share/qt5/translations/qt*_fr.qm
+	/usr/share/qt5/translations/qt*_zh_CN.qm
 "
