--- a/core/modules/run-virt/data/opt/openslx/vmchooser/config/udhcpd-nat1.conf
+++ b/core/modules/run-virt/data/opt/openslx/vmchooser/config/udhcpd-nat1.conf
@@ -1,12 +1,15 @@
-# Copyright (c) 2013 - OpenSLX GmbH 
-# 
-# This program is free software distributed under the GPL version 2. 
-# See http://openslx.org/COPYING 
-# 
-# If you have any feedback please consult http://openslx.org/feedback and 
-# send your suggestions, praise, or complaints to feedback@openslx.org 
-# 
-# General information about OpenSLX can be found at http://openslx.org/ 
+# -----------------------------------------------------------------------------
+#
+# Copyright (c) 2013..2018 bwLehrpool-Projektteam
+#
+# This program/file is free software distributed under the GPL version 2.
+# See https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
+#
+# If you have any feedback please consult https://bwlehrpool.de and
+# send your feedback to bwlehrpool@hs-offenburg.de.
+#
+# General information about bwLehrpool can be found at https://bwlehrpool.de
+#
 # -----------------------------------------------------------------------------
 # udhcpd.conf
 #    - This is the udhcpd configuration file servicing the nat1 interface for
