[xscreensaver] Build bwlp-screensaver

--- a/core/modules/xscreensaver/module.conf
+++ b/core/modules/xscreensaver/module.conf
@@ -1,7 +1,13 @@
 #!/bin/bash
+REQUIRED_MODULES="
+	qt5core
+"
+REQUIRED_GIT="git://git.openslx.org/openslx-ng/bwlp-screensaver.git"
+REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="
 	xscreensaver
 	xscreensaver-command
+	bwlp-screensaver
 "
 REQUIRED_LIBRARIES=""
 REQUIRED_DIRECTORIES="
