--- a/core/modules/lightdm/data/etc/systemd/system/lightdm.service
+++ b/core/modules/lightdm/data/etc/systemd/system/lightdm.service
@@ -7,6 +7,7 @@ After=dev-tty7.device systemd-user-sessions.service setup-slx-addon@nvidia_libs.
 [Service]
 ExecStart=/usr/sbin/lightdm
 Restart=always
+TimeoutStopSec=10
 
 [Install]
 WantedBy=graphical.target
