--- a/core/modules/xscreensaver/module.conf
+++ b/core/modules/xscreensaver/module.conf
@@ -2,7 +2,10 @@
 REQUIRED_MODULES="
 	qt5core
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/bwlp-screensaver.git"
+REQUIRED_GIT="
+	git://git.openslx.org/openslx-ng/xscreensaver.git|openslx
+	git://git.openslx.org/openslx-ng/bwlp-screensaver.git
+"
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="
 	xscreensaver
