[vmware-common] Common files for vmware12 and vmware14

--- a/core/modules/vmware12/module.conf
+++ b/core/modules/vmware12/module.conf
@@ -1,7 +1,7 @@
 #!/bin/bash
 REQUIRED_VERSION="12.5.9"
 REQUIRED_TYPE="workstation"
-REQUIRED_MODULES="kernel"
+REQUIRED_MODULES="kernel vmware-common"
 REQUIRED_DIRECTORIES="
 	/etc/vmware
 	/usr/sbin
