--- a/core/modules/vmware14/module.conf
+++ b/core/modules/vmware14/module.conf
@@ -1,7 +1,7 @@
 #!/bin/bash
 REQUIRED_VERSION="14.0.0"
 REQUIRED_TYPE="workstation"
-REQUIRED_MODULES="kernel"
+REQUIRED_MODULES="kernel vmware-common"
 REQUIRED_DIRECTORIES="
 	/etc/vmware
 	/usr/sbin
