--- a/core/modules/xscreensaver/data/opt/openslx/xscreensaver/messages.ini
+++ b/core/modules/xscreensaver/data/opt/openslx/xscreensaver/messages.ini
@@ -1,7 +1,7 @@
 [General]
-shutdown=Achtung: Rechner wird in %1 heruntergefahren!
-shutdown-locked=Achtung: Rechner wird in %1 heruntergefahren!
-idle-kill=Diese Sitzung wird bei Inaktivität in %1 beendet.
-idle-kill-locked=Diese Sitzung wird in %1 beendet, wenn sie nicht entsperrt wird.
-no-timeout=Dieser Bildschirm wird gerade geschont.
-no-timeout-locked=Dieser Rechner ist gesperrt.
+shutdown="Achtung: Rechner wird in %1 heruntergefahren!"
+shutdown-locked="Achtung: Rechner wird in %1 heruntergefahren!"
+idle-kill="Diese Sitzung wird bei Inaktivität in %1 beendet."
+idle-kill-locked="Diese Sitzung wird in %1 beendet, wenn sie nicht entsperrt wird."
+no-timeout="Dieser Bildschirm wird gerade geschont."
+no-timeout-locked="Dieser Rechner ist gesperrt."
