[beamergui] Update to 2.0, move parse-edid to own module

--- a/core/modules/beamergui/module.conf
+++ b/core/modules/beamergui/module.conf
@@ -1,10 +1,10 @@
 #!/bin/bash
 REQUIRED_MODULES="
+	parse-edid
 	qt5core
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/beamergui.git"
+REQUIRED_GIT="git://git.openslx.org/openslx-ng/beamergui.git|2.0"
 REQUIRED_BINARIES="
 	beamergui
-	parse-edid
 "
 
