--- a/core/rootfs/rootfs-stage31/module.conf
+++ b/core/rootfs/rootfs-stage31/module.conf
@@ -12,6 +12,7 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/net/ethernet/*.ko
 	kernel/drivers/net/ethernet/*/*.ko
 	kernel/drivers/net/ethernet/*/*/*.ko
+	kernel/drivers/net/ethernet/*/*/*/*.ko
 	kernel/drivers/video/sis/sisfb.ko
 	kernel/drivers/video/via/viafb.ko
 	kernel/drivers/acpi/video.ko
@@ -65,6 +66,8 @@ REQUIRED_FIRMWARE="
 	tigon/
 	i915/
 	intel/
+	cxgb3/
+	mellanox/
 "
 REQUIRED_LIBRARIES="
 	libnss_files
