Kill REQUIRED_FIRMWARE; extract required firmware from modinfo

--- a/core/rootfs/rootfs-stage31/module.conf
+++ b/core/rootfs/rootfs-stage31/module.conf
@@ -9,66 +9,43 @@ REQUIRED_MODULES="
 	haveged
 "
 REQUIRED_KERNEL_MODULES="
-	kernel/drivers/net/ethernet/*.ko
-	kernel/drivers/net/ethernet/*/*.ko
-	kernel/drivers/net/ethernet/*/*/*.ko
-	kernel/drivers/net/ethernet/*/*/*/*.ko
-	kernel/drivers/video/sis/sisfb.ko
-	kernel/drivers/video/via/viafb.ko
-	kernel/drivers/acpi/video.ko
-	kernel/drivers/ssb/ssb.ko
 	kernel/drivers/acpi/acpi_ipmi.ko
-	kernel/drivers/char/ipmi/*.ko
 	kernel/drivers/acpi/button.ko
-	kernel/drivers/gpu/drm/drm*.ko
-	kernel/drivers/gpu/drm/*/*.ko
-	kernel/drivers/gpu/drm/*/*/*.ko
+	kernel/drivers/acpi/video.ko
+	kernel/drivers/block/nbd.ko
+	kernel/drivers/char/ipmi
+	kernel/drivers/gpu/drm
+	kernel/drivers/hid/hid-cherry.ko
 	kernel/drivers/hid/hid-generic.ko
+	kernel/drivers/hid/hid.ko
+	kernel/drivers/hid/usbhid/usbhid.ko
 	kernel/drivers/i2c/algos/i2c-algo-bit.ko
 	kernel/drivers/i2c/i2c-core.ko
-	kernel/drivers/usb/usb-common.ko
-	kernel/drivers/usb/core/usbcore.ko
+	kernel/drivers/net/ethernet
 	kernel/drivers/net/netconsole.ko
-	kernel/drivers/hid/hid.ko
-	kernel/drivers/hid/hid-cherry.ko
-	kernel/drivers/hid/usbhid/usbhid.ko
-	kernel/drivers/platform/x86/wmi.ko
-	kernel/drivers/platform/x86/mxm-wmi.ko
-	kernel/fs/configfs/configfs.ko
-	kernel/fs/nfs_common/nfs_acl.ko
-	kernel/fs/nfs/nfs.ko
-	kernel/fs/fscache/fscache.ko
-	kernel/fs/lockd/lockd.ko
-	kernel/fs/squashfs/squashfs.ko
-	kernel/fs/xfs/xfs.ko
-	kernel/net/sunrpc/sunrpc.ko
-	kernel/net/sunrpc/auth_gss/auth_rpcgss.ko
-	kernel/net/802/stp.ko
-	kernel/net/bridge/bridge.ko
-	kernel/ubuntu/aufs/aufs.ko
-	kernel/fs/aufs/aufs.ko
-	kernel/drivers/block/nbd.ko
 	kernel/drivers/parport/parport.ko
+	kernel/drivers/platform/x86/mxm-wmi.ko
+	kernel/drivers/platform/x86/wmi.ko
+	kernel/drivers/ssb/ssb.ko
+	kernel/drivers/usb/core/usbcore.ko
+	kernel/drivers/usb/usb-common.ko
 	kernel/drivers/video/backlight/adp8860_bl.ko
 	kernel/drivers/video/backlight/adp8870_bl.ko
+	kernel/drivers/video/sis/sisfb.ko
+	kernel/drivers/video/via/viafb.ko
+	kernel/fs/aufs/aufs.ko
+	kernel/fs/configfs/configfs.ko
+	kernel/fs/fscache/fscache.ko
+	kernel/fs/lockd/lockd.ko
+	kernel/fs/nfs/nfs.ko
+	kernel/fs/nfs_common/nfs_acl.ko
+	kernel/fs/squashfs/squashfs.ko
 	kernel/fs/xfs/xfs.ko
-"
-REQUIRED_FIRMWARE="
-	3com/
-	amdgpu/
-	e100/
-	matrox/
-	r128/
-	radeon/
-	RTL8192E/
-	RTL8192SE/
-	rtl_nic/
-	tigon/
-	i915/
-	intel/
-	cxgb3/
-	cxgb4/
-	mellanox/
+	kernel/net/802/stp.ko
+	kernel/net/bridge/bridge.ko
+	kernel/net/sunrpc/auth_gss/auth_rpcgss.ko
+	kernel/net/sunrpc/sunrpc.ko
+	kernel/ubuntu/aufs/aufs.ko
 "
 REQUIRED_LIBRARIES="
 	libnss_files
