[hardware-stats] Try to make shutdown hook run earlier

--- a/core/modules/hardware-stats/data/etc/systemd/system/shutdown-usage-log.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/shutdown-usage-log.service
@@ -1,7 +1,8 @@
 [Unit]
-Description=Tell server we're shuttong down
+Description=Tell server we're shutting down
 DefaultDependencies=no
 Before=shutdown.target
+After=-.mount network-online.target
 RefuseManualStart=yes
 
 [Service]
