[nvidia] bump to 410.93

--- a/core/modules/nvidia_libs/module.conf
+++ b/core/modules/nvidia_libs/module.conf
@@ -1,12 +1,11 @@
 #!/bin/bash
-REQUIRED_VERSION="384.59"
+REQUIRED_VERSION="410.93"
 REQUIRED_NVIDIA="NVIDIA-Linux-x86_64-$REQUIRED_VERSION.run"
 REQUIRED_URL="http://download.nvidia.com/XFree86/Linux-x86_64/$REQUIRED_VERSION/$REQUIRED_NVIDIA"
 
 REQUIRED_FILES="
 				/etc/OpenCL/vendors/nvidia.icd
-				/usr/share/nvidia/nvidia-application-profiles-$REQUIRED_VERSION-rc
-				/usr/share/applications/nvidia-settings.desktop
+				/usr/local/share/applications/nvidia-settings.desktop
 				/opt/openslx/etc/nvidia.whiteout
 "
 
@@ -14,5 +13,9 @@ REQUIRED_DIRECTORIES="
 				/usr/bin
 				/usr/lib
 				/var/lib/nvidia
+				/usr/share/nvidia
+				/usr/share/egl
+				/usr/share/glvnd
+				/usr/share/X11
 "
 
