[polkit] remove library missing in newer ubuntu
we never knew why this was needed anyway...
Confirmed that poweroff and restart lightdm actions still work.

--- a/core/modules/polkit/module.conf
+++ b/core/modules/polkit/module.conf
@@ -10,5 +10,5 @@ REQUIRED_FILES="
 	/usr/share/dbus-1/system-services/org.freedesktop.PolicyKit1.service
 	/etc/systemd/system/polkit.service
 "
-REQUIRED_LIBRARIES="libmozjs185"
+#REQUIRED_LIBRARIES="libmozjs185"
 
